WebUI: initial suuport for role zettel
FossilOrigin-Name: f819f27e99011b071deec46a10f8af71fff8076d413c0c95cda5bec62d22bd8c

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -3,7 +3,11 @@
 <a id="0_16"></a>
 <h2>Changes for Version 0.16.0 (pending)</h2>
   *  Allow to determine a role zettel for a given role.
-     (major: api)
+     (major: api, webui)
+  *  Present user the option to create a (missing) role zettel (in list view).
+     Results in a new predefined zettel with identifier 00000000090004, which
+     is a template for new role zettel.
+     (minor: webui)
   *  Timestamp values can be abbrevated by omitting most of its components.
      Previously, such values that are not in the format YYYYMMDDhhmmss were
      ignored. Now the following formats are also allowed: YYYY, YYYYMM,
