Fix sxn code that removed role-based customization, esp. for an additional action if role is "tag"
FossilOrigin-Name: e721174596e47870ed28b89b6567a8886aa6d63bfb461c0ba9376aa4ae6c1ffd

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -4,6 +4,10 @@
 <h2>Changes for Version 0.17.0 (pending)</h2>
 
 <a id="0_16"></a>
+<h2>Changes for Version 0.16.1 (2023-12-28)</h2>
+  *  Fix some Sxn definitions to allow role-based UI customizations.
+     (minor: webui)
+
 <h2>Changes for Version 0.16.0 (2023-11-30)</h2>
   *  Sx function <code>define</code> is removed, as announced for version
      0.15.0. Use <code>defvar</code> (to define variables) or
