WebUI: show list controls only when query list is non-empty
FossilOrigin-Name: 85f1aba976744b3731b5c281bff26b7460e3721494f1f179a15335bc4e6c20d7

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -8,6 +8,9 @@
   *  Add UI action for role zettel, similar to tag zettel. Obviously forgotten
      in release 0.16.0, but thanks to the bug fix v0.16.1 detected.
      (minor: webui)
+  *  Only when query list is not empty, allow to show data and plain encoding,
+     an optionally show the &ldquo;Save As Zettel&rdquo; button.
+     (minor: webui)
 
 <a id="0_16"></a>
 <h2>Changes for Version 0.16.1 (2023-12-28)</h2>
