Add FULL directive to CONTEXT query
FossilOrigin-Name: 4a0a24da2494272db2e0db72cbf38dd8bc99686c4b3584f7e884c1207ce1f270

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,12 @@
 
 <a id="0_17"></a>
 <h2>Changes for Version 0.17.0 (pending)</h2>
+  *  Context search operates only on explicit references. Add the directive
+     <code>FULL</code> to follow zettel tags additionally.
+     (breaking)
+  *  Context cost calculation has been changed. Prepare to retrieve different
+     result.
+     (breaking)
   *  Make WebUI form elements a little bit more accessible by using search tag
      and inputmode attribute.
      (minor: webui)
