WebUI: add query action REDIRECT
FossilOrigin-Name: 955bbfe0fad66565a5970a3ca7249ac4c7c151c8193e9f3519c252343ae77c29

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -8,6 +8,9 @@
   *  Context cost calculation has been changed. Prepare to retrieve different
      result.
      (breaking)
+  *  Add query action <code>REDIRECT</code> which redirects WebUI to zettel
+     that is the first in the query result list.
+     (minor: webui)
   *  Make WebUI form elements a little bit more accessible by using search tag
      and inputmode attribute.
      (minor: webui)
