--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -11,6 +11,8 @@
   *  Add query action <code>REDIRECT</code> which redirects to zettel that is
      the first in the query result list.
      (minor: api, webui)
+  *  Add link to <code>CONTEXT FULL</code> in the zettel info page.
+     (minor: webui)
   *  Make WebUI form elements a little bit more accessible by using search tag
      and inputmode attribute.
      (minor: webui)
