WebUI: generate a matching query for all tags / words
FossilOrigin-Name: 51cfe45f789f7f4f36ecaee582201f2c31e563ee310b77f925f9d193ed05a58c

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -13,6 +13,9 @@
      (minor: api, webui)
   *  Add link to <code>CONTEXT FULL</code> in the zettel info page.
      (minor: webui)
+  *  When generating HTML code to query set based meta data (esp. tags), also
+     generate a query that matches all values.
+     (minor: webui)
   *  Make WebUI form elements a little bit more accessible by using search tag
      and inputmode attribute.
      (minor: webui)
