Actions in uppercase letters that result in an empty list, will be ignored and the selected zettel list in retured. This is for compatibility.
FossilOrigin-Name: 83eefb5fcad4495b3dfc8910f5228e2a08a12ff51f25a92f336b45a1681f2425

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -22,6 +22,10 @@
   *  Add UI action for role zettel, similar to tag zettel. Obviously forgotten
      in release 0.16.0, but thanks to the bug fix v0.16.1 detected.
      (minor: webui)
+  *  If an action, which is written in uppercase letters, results in an empty
+     list, the list of selected zettel is returned instead. This allows some
+     backward compatibility if a new action is introduced.
+     (minor)
   *  Only when query list is not empty, allow to show data and plain encoding,
      an optionally show the &ldquo;Save As Zettel&rdquo; button.
      (minor: webui)
