Remove metadata type WordSet
FossilOrigin-Name: 6b781a62ee5adfe7fd54d0ac7dff3df9d73dfe7d9077dc0394c0e5546cc43f07

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -8,6 +8,9 @@
   *  Context cost calculation has been changed. Prepare to retrieve different
      result.
      (breaking)
+  *  Remove metadata type WordSet. It was never implemented completely, and
+     nobody complained about this.
+     (breaking)
   *  Add query action <code>REDIRECT</code> which redirects to zettel that is
      the first in the query result list.
      (minor: api, webui)
