--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -11,6 +11,8 @@
   *  Remove metadata type WordSet. It was never implemented completely, and
      nobody complained about this.
      (breaking)
+  *  Remove logging level &ldquo;sense&rdquo;
+     (breaking)
   *  Add query action <code>REDIRECT</code> which redirects to zettel that is
      the first in the query result list.
      (minor: api, webui)
