--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -11,18 +11,19 @@
   *  Remove metadata type WordSet. It was never implemented completely, and
      nobody complained about this.
      (breaking)
-  *  Remove logging level &ldquo;sense&rdquo;
+  *  Remove logging level &ldquo;sense&rdquo;, &ldquo;warn&rdquo;,
+     &ldquo;fatal&rdquo;, and &ldquo;panic&rdquo;.
      (breaking)
   *  Add query action <code>REDIRECT</code> which redirects to zettel that is
      the first in the query result list.
      (minor: api, webui)
   *  Add link to <code>CONTEXT FULL</code> in the zettel info page.
      (minor: webui)
-  *  When generating HTML code to query set based meta data (esp. tags), also
+  *  When generating HTML code to query set based metadata (esp. tags), also
      generate a query that matches all values.
      (minor: webui)
-  *  Make WebUI form elements a little bit more accessible by using search tag
-     and inputmode attribute.
+  *  Make WebUI form elements a little bit more accessible by using HTML
+     <code>search</code> tag and <code>inputmode</code> attribute.
      (minor: webui)
   *  Add UI action for role zettel, similar to tag zettel. Obviously forgotten
      in release 0.16.0, but thanks to the bug fix v0.16.1 detected.
@@ -37,7 +38,7 @@
   *  If query list is greater than three elements, show the number of elements
      at bottom (before other encodings).
      (minor: webui)
-  *  Zettel with syntax ldquo;sxn&rdquo; are pretty-printed during evaluation.
+  *  Zettel with syntax &ldquo;sxn&rdquo; are pretty-printed during evaluation.
      This allows to retrieve parsed zettel content, which checked for syntax,
      but is not pretty-printed.
      (minor)
