WebUI: shaow all metadata with key ending "-url" on zettel view
FossilOrigin-Name: 8c07ae69e68eeab5acf286247a38f5542704d4059c232e5e9f2f7dffcce0cd9d

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -22,6 +22,8 @@
   *  When generating HTML code to query set based metadata (esp. tags), also
      generate a query that matches all values.
      (minor: webui)
+  *  Show all metadata with key ending &ldquo;-url&rdquo; on zettel view.
+     (minor: webui)
   *  Make WebUI form elements a little bit more accessible by using HTML
      <code>search</code> tag and <code>inputmode</code> attribute.
      (minor: webui)
