Adapt to new location of sx repo
FossilOrigin-Name: af2a8a224e53b5f0a187ff8303f434ff414a44810bf982335dc6575ac77d0898

--- a/www/index.wiki
+++ b/www/index.wiki
@@ -21,8 +21,8 @@ The software, including the manual, is licensed under the
   *  [https://zettelstore.de/contrib|Zettelstore Contrib] contains contributed
      software, which often connects to Zettelstore via its API. Some of the
      software packages may be experimental.
-  *  [https://zettelstore.de/sx|Sx] provides an evaluator for symbolic
-     expressions, which is unsed for HTML templates and more.
+  *  [https://t73f.de/r/sx|Sx] provides an evaluator for symbolic
+     expressions, which is used for HTML templates and more.
 
 [https://mastodon.social/tags/Zettelstore|Stay tuned]&nbsp;&hellip;
 <hr>
