--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -9,6 +9,11 @@
      previous behaviour, set <code>umask</code> accordingly, for example
      <code>umask 066</code>.
      (major: dirbox)
+  *  Add metadata key <code>created-missing</code> to list zettel without
+     stored metadata key <code>created</code>. Needed for migration to planned
+     new zettelstore identifier format, which is not based on timestamp of
+     zettel creation date.
+     (minor)
   *  Update Sx prelude: make macros more robust / more general. This might
      break your code in the future.
      (minor: webui)
