Initial version of zettel "Zettelstore Identifier Mapping"
FossilOrigin-Name: f292a41e5c398b3ed2b06ce23349d39f23a563e8922fa3dcdf7ff61c1725cd6b

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -12,6 +12,10 @@
   *  Add zettel &ldquo;Zettelstore Warnings&rdquo; to help identifying zettel
      to upgrade for future migration to planned new zettel identifier format.
      (minor: webui)
+  *  Add zettel &ldquo;Zettelstore Identifier Mapping&rdquo; to show a possible
+     mapping from the old identifier format to the new one. This should help
+     users to possibly rename some zettel for a metter mapping.
+     (minor: webui)
   *  Add metadata key <code>created-missing</code> to list zettel without
      stored metadata key <code>created</code>. Needed for migration to planned
      new zettelstore identifier format, which is not based on timestamp of
