Remove "rename" operation (both webui and api; plus internal zettel etc)
FossilOrigin-Name: b61264a18b2b02f3b8627b257cc9c9535879829bb5ff3b994612377a8ea49066

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,9 @@
 
 <a id="0_19"></a>
 <h2>Changes for Version 0.19.0 (pending)</h2>
+  *  Remove support for renaming zettel, i.e. changing zettel identifier. Was
+     announced as deprecated in version 0.18.
+     (breaking: api, webui)
 
 <a id="0_18"></a>
 <h2>Changes for Version 0.18.0 (2024-07-11)</h2>
