Fix quote handling in md encoder
FossilOrigin-Name: c7abde64b0f8a981e42ef0c37e2d40c5ae4f71fef4fadb6b72be770b983e5058

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -5,6 +5,8 @@
   *  Remove support for renaming zettel, i.e. changing zettel identifier. Was
      announced as deprecated in version 0.18.
      (breaking: api, webui)
+  *  Fix wrong quote translation for markdown encoder.
+     (minor)
 
 <a id="0_18"></a>
 <h2>Changes for Version 0.18.0 (2024-07-11)</h2>
