Calculate b36-zid when reading zettel/metadata; show b36-zid in zettel view, info view, and delete view
FossilOrigin-Name: 36f3326f6c4ce9467d7397f6e147034ce303153fd7d16e6dcea77ccdd5768305

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -9,6 +9,9 @@
      (minor)
   *  Generate <th> in table header (was: <td>). Also applies to SHTML encoder.
      (minor: webui, api)
+  *  Show new format zettel identifier in zettel view, info view and delete
+     view.
+     (minor: webui)
 
 <a id="0_18"></a>
 <h2>Changes for Version 0.18.0 (2024-07-11)</h2>
