Use rel="external" for external links; adapt to some client changes
FossilOrigin-Name: ab989d6ec13903104d07fce58b07a57019c87625ac38ca0fce138fa46310fca9

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -9,6 +9,9 @@
      (minor)
   *  Generate <th> in table header (was: <td>). Also applies to SHTML encoder.
      (minor: webui, api)
+  *  External links are now generatd in shtml and html with attribute
+     rel="external" (previously: class="external").
+     (minor: webui, api)
   *  Show new format zettel identifier in zettel view, info view and delete
      view.
      (minor: webui)
